# zta-ai-ai

./: .gitignore  ARCHITECTURE_REFACTOR_SUMMARY.md  DEPLOYMENT_GUIDE.md  README.md  TECH_req.md  ZTA-AI_Agentic_Agents.md  ZTA_AI_FINAL_PRODUCT_PRODUCTION_PLAN.md  docker-compose.local.yml  docker-compose.yml  flow.md  nginx.conf  test_execution.ps1  test_zta.db
zta_agentic_service/: .dockerignore  .env  Dockerfile  README.md  TESTING_OUTCOMES_BACKLASH_REPORT_2026-04-18.md  docker-compose.yml  pyproject.toml
zta_agentic_service/app/: __init__.py  main.py
zta_agentic_service/app/actions/: __init__.py  base.py  workflows.py
zta_agentic_service/app/agents/: __init__.py  base_handler.py  executor.py  registry_loader.py
zta_agentic_service/app/api/: dependencies.py
zta_agentic_service/app/core/: __init__.py  config.py  invariants.py  logging.py
zta_agentic_service/app/db/: __init__.py  agent_models.py  enums.py  init_db.py  models.py  session.py  tenant.py
zta_agentic_service/app/integrations/: ticketing.py
zta_agentic_service/app/plugins/: __init__.py  base.py  registry.py
zta_agentic_service/app/schemas/: actions.py  common.py  execution.py  intent.py  registry.py
zta_agentic_service/app/services/: cache.py  context_manager.py  intent_resolver.py  llm_safety.py  monitoring.py  orchestrator.py  (+4 more)
zta_agentic_service/migrations/: env.py
zta_agentic_service/scripts/: seed_agent_templates.py
zta_agentic_service/tests/: test_intent_resolver.py  test_state_machine.py
zta_agentic_service/zta_agentic_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+361 files in other folders)
